Fixed issues on mobile

--- a/src/app/view/view.component.css
+++ b/src/app/view/view.component.css
@@ -1,5 +1,7 @@
 .total{
-    margin: 2% 18%;
+    margin: 2% 28%;
+    overflow: hidden;
+    margin-bottom: 5%;
 }
 
 .contain{
@@ -11,13 +13,8 @@
 }
 
 .image{
-    /* width: 30%; */
-    /* display: block; */
-    /* max-width: 100%; */
-    /* margin: 1em; */
     width: 100%;
     height: auto;
-  
 }
 
 p{
@@ -25,21 +22,11 @@ p{
 }
 
 .content{
-    /* border: 2px solid pink; */
-    /* padding: 5% 5% 5% 5%; */
     padding: 2% 8%;
     padding-top: 0%;
-    /* margin: auto; */
-    /* margin: 2% 3% 2% 5%; */
     background-color: rgb(200, 248, 238);
     margin: -2% -2% -2% 2%;
-    /* margin:  0%; */
     width: 100%;
-    /* overflow-wrap: normal; */
-    /* display: block; */
-    /* align-items: flex-start; */
-    /* flex-shrink: 10%; */
-
 }
 
 .text{
@@ -65,13 +52,10 @@ button[disabled], button[disabled]:hover{
     background-color: gray;
 }
 
-/* .btn-group{
-    display: inline-flex;
-} */
-
 .inc{
     background-color: lightseagreen;
     width: 35px;
+    height: 100%;
 }
 
 .inc:hover{
@@ -91,14 +75,20 @@ h2,h3 {
 
 .cart{
     bottom: 0px;
-    display: flex;
+    height: 35px;
+    /* display: flex; */
     position: relative;
-    width: 100%;
-    height: 30px;
+    width: 85%;
     padding-bottom: 1%;
     padding-top: 1%;
+    /* padding-right: 10%; */
     display: inline-flex;
 }
+
+#space{
+    margin-right:35%;
+}
+
 
 .content::after{
     padding-bottom: 2%;
@@ -113,22 +103,27 @@ h2,h3 {
     background-color: lightcoral;
     height: 3%;
     padding: 2%;
+    padding-bottom: 2.5%;
     display: grid;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    /* display: inline-flex; */
+
 }
 
 .check-btn{
-    height: 40%;
+    height: 45%;
     width: 20%;
     margin-left: 70%;
-    /* padding-left: 70%;
-    padding-top: 2%; */
     position: absolute;
     bottom: 30%;
     background-color: lightseagreen;
     cursor: pointer;
+}
+
+#continue-btn{
+    margin-top: 3%;
+    width: 35%;
+    height: 60%;
 }
 
 @media only screen and (max-width: 760px) {
@@ -152,29 +147,63 @@ h2,h3 {
         padding: 1.6%;
     }
     .footer {
-        padding-bottom: 3%;
+        padding-bottom: 4%;
     }
     .total{
-        margin: 2% 16%;
+        margin: 2% 28%;
+        margin-bottom: 8%;
+    }
+    .cart{
+        height: 50px;
+    }
+    .inc{
+        height: 60%;
+        margin: auto;
     }
 }
 
-/* @media only screen and (max-width: 760px) and (min-width: 496px){ */
-    /* .contain {
-        margin: 2%;
-        padding: 2%;
+@media only screen and (max-width: 760px) and (min-width: 570px){
+    .total{
+        margin: 2% 15%; 
+        margin-bottom: 12%;
     }
     .cart{
-        height: 40px;
-    } */
-    /* .footer {
-        left: -5%;
-        right: -5%;
-    } */
-    /* .total{
-        margin: 2% 10% 0% 10%;
-    } */
-/* } */
+        height: 35px;
+    }
+    .footer {
+        padding-bottom: 5%;
+    }
+    .check-btn{
+        height: 50%;
+        width: 25%;
+        margin-left: 65%;
+        bottom: 24%;
+    }
+}
+
+@media only screen and (min-width: 100px) and (max-width: 570px){
+    .cart{
+        height: 55px;
+    }
+    .inc{
+        height: 60%;
+        margin: auto;
+    }
+    .total{
+        margin-bottom: 18%;
+    }
+    .footer {
+        padding: 3.5%;
+        padding-bottom: 7.5%;
+    }
+    .check-btn{
+        height: 50%;
+        width: 25%;
+        margin-left: 65%;
+        bottom: 24%;
+    }
+
+}
 
 #checkout{
     text-align: center;
@@ -182,24 +211,19 @@ h2,h3 {
     font-size: 20px;
     align-items: center;
     font-weight: bold;
+    height: 40%;
     font-family: 'Times New Roman', Times, serif;
     color: rgb(107, 37, 37);
 }
 
 .table{
     width: 100%;
-    /* margin: 2% 14%; */
-    display: flex;
     padding: 10%;
-    /* border-collapse: collapse; */
-    /* overflow: auto; */
 }
 
 th, td{
     text-align: left;
     padding: 10px;
-    /* font-size: 18px; */
-    /* display: inline-block; */
 }
 
 tr:nth-child(even), tr th{
@@ -224,7 +248,7 @@ tr:nth-child(odd){
     width: 100%;
     height: 30px; 
     padding: 2%;
-    margin: 2% 3% 2% 26%;
+    margin: 2% 3% 2% 24%;
     display: flex;
 }
 
@@ -233,39 +257,32 @@ tr:nth-child(odd){
 }
 
 .modal {
-    /* display: none; Hidden by default */
-    width: 60%; /* Full width */
-    height: 100%; /* Full height */
-    z-index: 1; /*Sit on top*/
-    padding: 20%; /* Location of the box */
-    position: fixed; /* Stay in place */
-    /* right: -10; */
-    /* overflow: auto; Enable scroll if needed */
-    /* background-color: rgb(0,0,0); Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 60%; 
+    height: 100%; 
+    z-index: 1; 
+    padding: 20%; 
+    position: fixed; 
+    background-color: rgb(0,0,0,0.5); 
     left: 0;
     top: 0;
     margin-right: 0%;
   }
   
-  /* Modal Content */
   .modal-content {
     background-color: rgb(215, 241, 241);
     margin: auto;
     padding: 20px;
-    border: 2px solid grey;
+    border: 2px solid rgb(11, 211, 218);
     width: 60%;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
   }
   
-  /* The Close Button */
   .close {
     color: grey;
     float: right;
     font-size: 28px;
-    /* font-weight: bold; */
   }
   
   .close:hover {
